<resources>
  <string name="app_name">CM</string>

  <string name="error_retry">Retry</string>
  <string name="error_message_no_internet">No Internet connection. Make sure that Wi-Fi or cellular mobile data is turned on, then try again.</string>
  <string name="error_message_default">Something went wrong, try again.</string>

  <string name="menu_sort_by">Sort By</string>
  <string name="menu_price_descending">Price Descending</string>
  <string name="menu_price_ascending">Price Ascending</string>
  <string name="menu_mileage_descending">Mileage Descending</string>
  <string name="menu_mileage_ascending">Mileage Ascending</string>
  <string name="menu_date_descending">Date Descending</string>
  <string name="menu_date_ascending">Date Ascending</string>
</resources>
