<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
      android:icon="@drawable/ic_sort"
      android:title="@string/menu_sort_by"
      app:showAsAction="always">
    <menu>
      <item
          android:id="@+id/menu_sortby_price_desc"
          android:checked="true"
          android:title="@string/menu_price_descending" />
      <item
          android:id="@+id/menu_sortby_price_asc"
          android:title="@string/menu_price_ascending" />
      <item
          android:id="@+id/menu_sortby_mileage_desc"
          android:title="@string/menu_mileage_descending" />
      <item
          android:id="@+id/menu_sortby_mileage_asc"
          android:title="@string/menu_mileage_ascending" />
      <item
          android:id="@+id/menu_sortby_date_desc"
          android:title="@string/menu_date_descending" />
      <item
          android:id="@+id/menu_sortby_date_asc"
          android:title="@string/menu_date_ascending" />
    </menu>
  </item>
</menu>